--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: 'poppins', 'sans-serif';
     box-sizing: border-box;
 }
+@media screen and (min-width: 20rem) {
 .container{
     width: 100vw;
     height: 100vh;
@@ -11,7 +12,7 @@
     background-position: center;
     background-size: cover;
     padding: 0 8%;
-}
+} }
 .logo{
     width: 120px;
     padding: 20px 0;
