--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     font-family: 'poppins', 'sans-serif';
     box-sizing: border-box;
 }
-@media screen and (min-width: 20rem) {
 .container{
     width: 100vw;
     height: 100vh;
@@ -12,7 +11,8 @@
     background-position: center;
     background-size: cover;
     padding: 0 8%;
-} }
+    column-count: 3;
+} 
 .logo{
     width: 120px;
     padding: 20px 0;
@@ -188,3 +188,22 @@
     font-weight: 900;
     font-style: italic;
   }
+
+  @media screen and (max-width: 600px)
+  {
+
+    .content h1{
+      font-size: 36px;
+      font-weight: 500;
+      -webkit-text-stroke: 1px black;
+  }
+
+  .launch-time div p{
+    -webkit-text-stroke: 1px black;
+    font-size: 26px;
+    margin-bottom: -14px;
+}
+
+  }
+
+  
